--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
 certifi==2025.1.31
 geopandas==1.0.1
 numpy==2.2.3
-packaging==24.2
 pandas==2.2.3
-pyogrio==0.10.0
+psutil==7.0.0
 pyproj==3.7.0
 python-dateutil==2.9.0.post0
 pytz==2025.1
 shapely==2.0.7
-six==1.17.0
 tqdm==4.67.1
 tzdata==2025.1
